--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 
 server.port=8082
 
+server.error.include-binding-errors=always
+server.error.include-message=always
+server.error.include-stacktrace=never
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/springboot_db
 spring.datasource.username=mvc_user
 spring.datasource.password=mvc_password
